# llmops

./: ALE-Pong-v5.csv  README.md  environment.yml  my-pre-commit.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
architecture/: arch.py
architecture/memory/: dqn.md  features.md  replay_buffer.md
scripts/: tensorboard_profiler.sh
src/: agent.py  atari_env.py  dqn_agent.py  env_setup.py  gpu_logger.py  main.py  metrics_exporter.py  model.py  policy_network.py  replay_buffer.py  train.py  utils.py
src/configurations/: experiment_poc.yaml
src/experiments/: cart_pole.py
src/features/: collect.py  collect_per_game.py  game_complexity.py
src/metrics/: collector.py  gpu.py  validation.py
src/models/mnist/: tf_mnist.py  torch_mnist.py
src/poc/: atari_env.py  replay_buffer.py
tests/: test_atari_env.py  test_basic.py  test_replay_buffer.py
