[tool.poetry]
name = "gpu-mem-genius"
version = "0.1.0"
description = "gpu memory through reinforcment learning"
authors = ["RyanWri <ranman37@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9, <=3.11"
tensorflow = "^2.18.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
ruff = "^0.7.3"
pre-commit = "^4.0.1"
psutil = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
